--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,18 +4,19 @@ on: [push]
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ 'ubuntu-20.04', 'macos-latest', 'windows-latest' ]
+        go: [ '1.19' ]
+    runs-on: ${{ matrix.os }}
+    name: Build (Go ${{ matrix.go }}, OS ${{ matrix.os }})
     steps:
       - uses: actions/checkout@v3
-
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
           go-version: 1.19
-
       - name: Build
         run: go build -v ./...
-
       - name: Test
-        run: go test -v ./...
+        run: go test -race -bench='.+' -v ./...
