--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           go-version: 1.19
       - name: Run coverage
-        run: go test -covermode=count -coverprofile=coverage.out -v ./...
+        run: go test -race -covermode=atomic -coverprofile=coverage.out -v ./...
       - name: Convert coverage.out to coverage.lcov
         uses: jandelgado/gcov2lcov-action@v1
       - name: Coveralls
